fix graalvm usage on jdk 11, 17, 21 (#340)